
* Support for MIPS32 platforms running Linux. Valgrind has been tested on
  MIPS32 and MIPS32r2 platforms running different Debian Squeeze and MeeGo
  distributions. Both little-endian and big-endian cores are supported.
  Memcheck, massif, lackey, callgrind and none are tools that have been
  tested and are known to work well. See README.mips for more details.

* ==================== TOOL CHANGES ====================

* Massif
  - Using the new option --soname-synonyms, Massif can now understand
    a program using statically linked malloc or using alternative
    malloc libraries (such as tcmalloc).

* Memcheck:

  - The leak_check GDB server monitor command now can
    control the maximum nr of loss records to output.

  - Reduction of memory use for applications allocating
    many blocks and/or having many partially defined bytes.

  - Addition of GDB server monitor command 'block_list' that lists
    the addresses/sizes of the blocks of a leak search loss record.

  - Addition of GDB server monitor command 'who_points_at' that lists
    the locations pointing at a block.

  - If a redzone size > 0 is given, VALGRIND_MALLOCLIKE_BLOCK now
    will detect an invalid access of these redzones, by marking them
    noaccess.
    Similarly, if a redzone size is given for a memory pool,
    VALGRIND_MEMPOOL_ALLOC will mark the redzones no access.
    This still allows to find some bugs if the user has forgotten
    to mark the pool superblock noaccess.

  - Using the new option --soname-synonyms, Memcheck can now understand
    a program using statically linked malloc or using alternative
    malloc libraries (such as tcmalloc).

  - Performance of leak check has been improved.

* DRD:

  - Added even more facilities that can help finding the cause of a data
    race, namely the command-line option --ptrace-addr and the macro
    DRD_STOP_TRACING_VAR(x). More information can be found in the manual.
